# c3s-451

./: .gitignore  DEPLOY.md  README.md  mkdocs.yml  pyproject.toml  test.ipynb
.github/workflows/: docs.yml
c3s_event_attribution_tools/: __init__.py  analogue_functions_C3S.py  analogues.py  constants.py  deprecated.py  plot.py  process.py  utils.py
c3s_event_attribution_tools/data/: __init__.py  beacon_client.py  cds_client.py  conversions.py  cordex_client.py  mars_client.py  variable.py
c3s_lib/: __init__.py  _data.py  analogue_functions_C3S.py  data.py  depreciated.py  plot.py  process.py  util.py  utils.py
c3s_lib/data/: __init__.py  beacon_client.py  cds_client.py  conversions.py  mars_client.py
docs/: index.md
docs/reference/: analogues.md  data.md  plot.md  process.md  util.md  utils.md
input-notebooks/: README.md
input-notebooks/C3S_analogues-main/: C3S01_analogues_Domain.ipynb  C3S02_analogues_VariableChoice.ipynb  C3S03_analogues_Composites.ipynb  C3S04_analogues_Frequency.ipynb  C3S_analogues_GetDates.ipynb  (+6 more)
notebook_templates/: 01_Event_definition.ipynb  02_Trend_analysis.ipynb  03_Circulation_analogues.ipynb  04_05_Model_validation_Probabilistic_attribution.ipynb  06_Synthesis.ipynb
testing_notebooks/: C3S02_analogues_VariableChoice_maris.ipynb  C3S_CirculationAnalogues.ipynb  C3S_EventDefinition.ipynb  C3S_EventDefinitionV2.ipynb  C3S_EventDefinitionV2_Precipitation.ipynb  C3S_EventDefinitionV2_daniel.ipynb  C3S_ModelValidation copy 2.ipynb  C3S_ModelValidation copy.ipynb  C3S_ModelValidation.ipynb  C3S_ModelValidation_Jasper.ipynb  C3S_Synthesis-Depricated.ipynb  C3S_Synthesis.ipynb  C3S_TrendAnalysis.ipynb  C3S_TrendAnalysis_Jasper.ipynb  C3S_TrendAnalysis_Tjerk.ipynb  C3S_TrendAnalysis_Tjerk_Backup.ipynb  Mexico.ipynb  WWA20250331_synthesis.ipynb  example.ipynb
(+21 files in other folders)
